@@ -607,8 +607,5 @@ no_cross_shore_detection = false
 ; tile. Setting to 2 gives you the game's standard rule that cities may work tiles within their level 2 cultural borders, which they attain after one
 ; expansion. Setting to 3 allows them to work within level 3 borders and so forth.
 ; Notes: (1) If you set this value >= 4, the map view on the city screen will be zoomed out when you enter it. Otherwise it's not possible to show the
-; entire work area. You can zoom back in by pressing Z. (2) Increasing this setting also triggers the AI to space its cities farther apart because
-; it's programmed to avoid overlapping work areas when founding cities. You can turn that programming off by activating the
-; ai_ignores_overlap_for_city_placement option above and use the minimum_city_separation option to force players to spread their cities out. (3) This
-; option has a minimum value of 1 and a maximum of 7.
+; entire work area. You can zoom back in by pressing Z. (2) This option has a minimum value of 1 and a maximum of 7.
 city_work_radius = 2
